--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>index</title>
   <meta charset="utf-8">
   <title>Module 4 Solution Starter</title>
   <script src="SpeakHello.js"></script>
@@ -8,6 +9,6 @@
   <script src="script.js"></script>
 </head>
 <body>
-  <h1>Module 4 Solution Starter</h1>
+  <h1>Module 4 Solution</h1>
 </body>
 </html>
